# rust-presentation

./: .editorconfig  Cargo.toml  presentation.md
src/: main.rs  ownership.rs  rayon.rs  threads.rs
src/solutions/: threads.rs
